# ManiacLab

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  Makefile  README.md  automaton.cpp  automaton.hpp  log.xsl  maniaclab.cpp  maniaclab.py  ml.cpp
CManiacLab/: Errors.hpp  GameCore.cpp  GameCore.hpp  GameObject.cpp  GameObject.hpp  IOUtils.cpp  IOUtils.hpp  Level.cpp  Level.hpp  Movements.cpp  Movements.hpp  Physics.cpp  Physics.hpp  PhysicsConfig.hpp  PythonInterface.cpp  PythonInterface.hpp  Stamp.cpp  Stamp.hpp  StructstreamIntf.cpp  TestObject.cpp  TestObject.hpp  Tileset.cpp  Tileset.hpp  Types.hpp
ManiacLab/: Application.py  GameObject.py  LoadingMode.py  MainMenu.py  MapEditor.py  Mode.py  TilesetEditor.py  TilesetFinder.py  __init__.py
data/blender/: bomb.blend  explosive.xcf  player.blend  rock.blend  safewall-plain.blend  safewall-straight.blend  safewall.blend  safewall5.blend  safewallf.blend  safewallrd0.blend  safewallrd3.blend  safewallsq0.blend  safewallsq1.blend  safewallsq3.blend  safewallsq5.blend  safewallsq7.blend
data/css/: ui.css
data/ui/: editor.glade
game/: CMakeLists.txt  actionbutton.cpp  actionbutton.hpp  application.cpp  application.hpp  editor.cpp  editor.h  editor.hpp  fixups.hpp  ingame.cpp  ingame.hpp  main.cpp  mainmenu.cpp  mainmenu.hpp  materials.cpp  materials.hpp  mode.cpp  mode.hpp  openglscene.cpp  openglscene.hpp
game/editor/: drag.cpp  drag.hpp  editor.cpp  editor.hpp  tools.hpp
game/intro/: intro.cpp  intro.hpp  scene.cpp  scene.hpp
game/io/: Data.cpp  Data.hpp  LevelData.cpp  StructstreamIntf.cpp  tileset_data.cpp  tileset_data.hpp
game/logic/: PythonInterface.hpp  base_objects.hpp  bomb_object.cpp  bomb_object.hpp  errors.hpp  explosion_object.cpp  explosion_object.hpp  fan_object.cpp  fan_object.hpp  fog_object.cpp  fog_object.hpp  game_object.cpp  game_object.hpp  level.cpp  level.hpp  movements.cpp  movements.hpp  particles.cpp  particles.hpp  physics.cpp  physics.hpp  physicsconfig.hpp  player_object.cpp  player_object.hpp  stamp.cpp  stamp.hpp  types.hpp  wall_object.cpp  wall_object.hpp
game/resources/: intro.qrc  shaders.qrc  tileset-core.qrc
game/resources/blender/: library.blend  safewall7.blend  safewallrd1.blend  safewallsq1.blend  safewallsq3.blend
game/resources/intro/s0/: scene.xml
game/resources/shaders/debug/: physics.frag  physics.vert  physics_flow.frag  physics_particle.frag  physics_particle.vert
game/resources/shaders/editor/: grid.frag  grid.vert
game/resources/shaders/effects/: fog.frag  fullscreenquad.vert  gameplane.vert  ghostplane.frag  lightcone.frag
game/resources/shaders/intro/: lightning-effect.frag  mixable.frag  rain-overlay.frag  simple.frag  simple.vert
game/resources/shaders/lib/: hsluv.glsl  inv_matrix_block.glsl  matrix_block.glsl  model_matrix_block.glsl  unproject.glsl
game/resources/shaders/objects/: dirt.frag  fallback.frag  object.vert
game/ui/: application.ui  editor.ui  ingame.ui  intro.ui  level_editor.ui  mainmenu.ui  openglscene.ui
libmaniaclab/: CMakeLists.txt
libmaniaclab/io/: Common.hpp  LevelData.hpp  tileset_data.cpp  tileset_data.hpp
libmaniaclab/logic/: bomb_object.cpp  bomb_object.hpp  builtin_tileset.cpp  builtin_tileset.hpp  dirt_object.cpp  dirt_object.hpp  editor_level.cpp  editor_level.hpp  explosion_object.cpp  explosion_object.hpp  fan_object.cpp  fan_object.hpp  fog_object.cpp  fog_object.hpp  game_object.cpp  game_object.hpp  level.cpp  level.hpp  movements.cpp  movements.hpp  particles.cpp  particles.hpp  physics.cpp  physics.hpp  physicsconfig.hpp  player_object.cpp  player_object.hpp  rock_object.cpp  rock_object.hpp  sensor.cpp  sensor.hpp  server.cpp  server.hpp  stamp.cpp  stamp.hpp  tileset.cpp  tileset.hpp  types.hpp  wall_object.cpp  wall_object.hpp  (+1 more)
libmaniaclab/proto/: maniaclab.proto
libmaniaclab/render/: visual_object.cpp  visual_object.hpp
src/editor/: DuplicateTile.cpp  DuplicateTile.hpp  Editor.cpp  Editor.hpp  GTKUtils.cpp  GTKUtils.hpp  LevelCollectionEditee.cpp  LevelCollectionEditee.hpp  LevelCollectionEditor.cpp  LevelCollectionEditor.hpp  LevelCollectionOperations.cpp  LevelCollectionOperations.hpp  LevelEditor.cpp  LevelEditor.hpp  NewTile.cpp  NewTile.hpp  OpenImage.cpp  OpenImage.hpp  Operation.cpp  Operation.hpp  RootWindow.cpp  RootWindow.hpp  TileEditor.cpp  TileEditor.hpp  TileOperations.cpp  TileOperations.hpp  TilesetEditDetails.cpp  TilesetEditDetails.hpp  TilesetEditee.cpp  TilesetEditee.hpp  TilesetEditor.cpp  TilesetEditor.hpp  TilesetOperations.cpp  TilesetOperations.hpp  UniqueNameDialog.cpp  UniqueNameDialog.hpp  VFSFileChooserDialog.cpp  VFSFileChooserDialog.hpp  ml-edit.cpp
src/game/: Application.cpp  Application.hpp  MainMenu.cpp  MainMenu.hpp  Mode.cpp  Mode.hpp  Playground.cpp  Playground.hpp  maniaclab.cpp
src/io/: Common.cpp  Common.hpp  Data.cpp  Data.hpp  LevelData.cpp  LevelData.hpp  StructstreamIntf.cpp  StructstreamIntf.hpp  TilesetData.cpp  TilesetData.hpp
src/logic/: BombObject.cpp  BombObject.hpp  ExplosionObject.cpp  ExplosionObject.hpp  GameObject.cpp  GameObject.hpp  Level.cpp  Level.hpp  MetatextureView.cpp  MetatextureView.hpp  Movements.cpp  Movements.hpp  Particles.cpp  Particles.hpp  Physics.cpp  Physics.hpp  PhysicsConfig.hpp  PlayerObject.cpp  PlayerObject.hpp  PythonInterface.cpp  RockObject.cpp  RockObject.hpp  SafeWallObject.cpp  SafeWallObject.hpp  Stamp.cpp  Stamp.hpp  TestObject.cpp  TileMaterial.cpp  TileMaterial.hpp  Tileset.hpp  Types.hpp  WallObject.cpp  WallObject.hpp  Weapon.cpp
tests/: CMakeLists.txt  main.cpp
tests/logic/: sensor.cpp
